[package]
name = "advent2023"
version = "0.1.0"
authors = ["Heath Kehoe <yaheath@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "*"
itertools = "*"
derivative = "*"
json = "*"
advent_lib = { version = "0.2.0", path = "../advent_lib" }
num = "0.4.1"
#linked-list = "0"
